--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
   </style>
 </head>
 <body>
-  <form action="https://formsubmit.co/gamingayush19@gmail.com" method="POST">
-    <u class="con"><h1>Contact Us</h1></u>
+  <div>
+        <u class="con"><h1>Contact Us</h1></u>
+  <form target="_blank"action="https://formsubmit.co/3f075d6066263160540f3ea791c152d5" method="POST">
+
     </br>
    
         </br>
@@ -91,6 +93,6 @@
      
     <button class="cool-button"type="submit" value="Submit">Submit</button>
   </form>
-
+</div>
 </body>
 </html>
