--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
   <div>
         <u class="con"><h1>Contact Us</h1></u>
-  <form target="_blank"action="https://formsubmit.co/3f075d6066263160540f3ea791c152d5" method="POST">
+  <form id="content-form">
 
     </br>
    
@@ -94,5 +94,34 @@
     <button class="cool-button"type="submit" value="Submit">Submit</button>
   </form>
 </div>
+   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("oiQFr6hicqx_B_");
+        })();
+    </script>
+
+    <script type="text/javascript">
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            // Get the form data
+            var templateParams = {
+                name: document.getElementById('name').value,
+                email: document.getElementById('email').value,
+                message: document.getElementById('message').value
+            };
+
+            // Send the email
+            emailjs.send('service_4v7naai', 'template_51uuuzs', templateParams)
+                .then(function(response) {
+                    console.log('SUCCESS!', response.status, response.text);
+                    alert('Email sent successfully!');
+                }, function(error) {
+                    console.log('FAILED...', error);
+                    alert('Failed to send email. Please try again.');
+                });
+        });
+    </script>
 </body>
 </html>
