--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
     <button class="cool-button"type="submit" value="Submit">Submit</button>
   </form>
 </div>
-   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function(){
-            emailjs.init("oiQFr6hicqx_B_");
-        })();
-    </script>
+  <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js'></script>
+<script type='text/javascript'>
+   (function(){
+      emailjs.init("oiQFr6hicqx_B_");
+   })();
+</script>
 
     <script type="text/javascript">
         document.getElementById('contact-form').addEventListener('submit', function(event) {
