--- a/index.html
+++ b/index.html
@@ -91,37 +91,27 @@
     <label for="message">Message:</label>
     <input type="message" id="message" name='message' required>
      
-    <button class="cool-button"type="submit" value="Submit">Submit</button>
+    <button class="cool-button"type="submit" value="send">Submit</button>
   </form>
 </div>
   <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js'></script>
 <script type='text/javascript'>
    (function(){
       emailjs.init("oiQFr6hicqx_B_-pg");
-   })();
-</script>
-
-    <script type="text/javascript">
-        document.getElementById('contact-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            // Get the form data
-            var templateParams = {
-                name: document.getElementById('name').value,
-                email: document.getElementById('email').value,
-                message: document.getElementById('message').value
-            };
-
-            // Send the email
-            emailjs.send('service_4v7naai', 'template_51uuuzs', templateParams)
-                .then(function(response) {
-                    console.log('SUCCESS!', response.status, response.text);
-                    alert('Email sent successfully!');
-                }, function(error) {
-                    console.log('FAILED...', error);
-                    alert('Failed to send email. Please try again.');
-                });
-        });
+   })
+ <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // these IDs from the previous steps
+                emailjs.sendForm('content_service', 'content_form', this)
+                    .then(() => {
+                        console.log('SUCCESS!');
+                    }, (error) => {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
     </script>
 </body>
 </html>
